--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,57 @@ header {
       text-decoration: none;
     }
 
+/* ABOUT THE COMPONENTS */
+.container-about{
+  max-width: 940px;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+
+p{
+  font-size: 0.90em
+  text-align: center;
+
+}
+
+h1 {
+  font-size: 2.25em;
+  text-align: center;
+  background-color:#F0F0F0;
+
+
+}
+
+
+.profile-images {
+  width: 200px;
+  border-radius: 50%;
+  display: block;
+  margin:20px auto;
+}
+
+h2{
+  font-size: 1.5em;
+  text-align: center;
+
+}
+
+
+h3 {
+
+  color: black;
+  font-size: 1.15em;
+  text-align: center;
+}
+
+icons-about{
+  width: 30px;
+
+}
+
 /* GENERAL FOOTER */
 
 
