Cambio redirecciónamiento imagenes en html

--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ h3 {
   text-align: center;
 }
 
-icons-about{
+.icons-about{
   width: 30px;
 
 }
@@ -135,7 +135,7 @@ footer {
 }
 
 
-/* SOCIAL ICONS AND LINKS*/
+/* linkedin.pngAL ICONS AND LINKS*/
 
 .social {
   margin-top: 40px;
