--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,21 @@ body {
 header {
       padding: 0.063em;
       color: white;
-      background-color: #2d333a;
+      background-color: #A63D40;
       text-align: center;
       font-family: poppins;
     }
+
+header h1 {
+  margin-bottom: 5px;
+}
+
+header h2 {
+  background-color: #C94A4E;
+  margin: 0;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  }
     #contenedor-flexible {
       display: flex;
       background-color: white;
@@ -57,6 +68,18 @@ header {
       text-decoration: none;
     }
 
+
+/* DESCRIPCIÓN EQUIPO */
+.team_description  {
+  margin-top: 150px;
+  margin-bottom: 150px;
+}
+
+.team_description h2 {
+  font-weight: 400;
+  font-size: 1.5em;
+}
+
 /* ABOUT THE COMPONENTS */
 .container-about{
   max-width: 940px;
@@ -76,9 +99,6 @@ p{
 h1 {
   font-size: 2.25em;
   text-align: center;
-  background-color:#F0F0F0;
-
-
 }
 
 
@@ -114,6 +134,7 @@ h3 {
 footer {
   color: #fff;
   background-color: #2d333a;
+  width: 100%;
 }
 
 .general-footer {
