--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,5 +1,8 @@
 @media screen and (max-width:468px) {
 
+  /* HEADER-NAVIGATION */
+
+
   header h1 {
      font-size: 2em;
   }
@@ -8,9 +11,16 @@
     font-size: 1.15em;
   }
 
+
   .item-flex {
     font-size: 1em;
   }
+
+  /* DESCRIPCIÓN EQUIPO */
+
+.team_description h2 {
+  font-size: 1.35em;
+}
 
 
 }
