--- a/css/style.css
+++ b/css/style.css
@@ -55,19 +55,19 @@ body {
     }
 
     .name-link {
-      color: #2d333a;
+      color: black;
       text-decoration: none;
     }
     .name-link:hover {
       background-color: lightgrey;
       text-decoration: none;
-      color: #2d333a;
+      color: black;
       display: inline-block;
       height: 3.125em;
       width: 12.5em;
     }
     .name-link:visited {
-      color: #2d333a;
+      color: black;
       text-decoration: none;
     }
 
