--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2,13 +2,18 @@
 
   /* HEADER-NAVIGATION */
 
+  header {
+    height: 300px;
+  }
+
+
 
   header h1 {
-     font-size: 2em;
+     font-size: 3em;
   }
 
   header h2 {
-    font-size: 1.15em;
+    font-size: 1.5em;
   }
 
 
