--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ header {
   background-position: center;
   background-size: cover;
   background-repeat: no-repet;
+  width: 100%;
   height: 400px;
   padding: 5% 1%;
   color: white;
@@ -37,6 +38,11 @@ header h2 {
   font-size: 2em;
 }
 
+
+h1-header,
+h2-header {
+  width: 100%;
+}
 #contenedor-flexible {
   background-color: white;
   display: flex;
