--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,10 @@ h2-header {
   text-align: center;
 }
 
+.team_description p {
+  font-size: 1.25em;
+}
+
 /* ABOUT THE COMPONENTS */
 .main-container-about {
   margin-left: 2.5%;
