--- a/css/style.css
+++ b/css/style.css
@@ -10,39 +10,43 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
-/* HEADER-NAVIGATION */
+
+/* --  HEADER -- */
 
 header {
   background-image: url('../img/woman-cod.jpg');
   background-position: center;
   background-size: cover;
-  background-repeat: no-repet;
+  background-repeat: no-repeat;
   width: 100%;
   height: 400px;
-  padding: 5% 1%;
+  padding: 5% 2%;
   color: white;
   text-align: center;
-  font-family: poppins;
 }
 
-header h1 {
-  margin-bottom: 5px;
+.h1-header {
+  margin-top: 40px;
+  margin-bottom: 0;
   font-size: 5em;
 
 }
 
-header h2 {
+.h2-header {
   margin: 0;
   padding-top: 10px;
-  padding-bottom: 20px;
+  padding-bottom: 50px;
   font-size: 2em;
 }
 
-
-h1-header,
-h2-header {
+.h1-header,
+.h2-header {
   width: 100%;
 }
+
+
+/* --  NAVIGATION -- */
+
 #contenedor-flexible {
   background-color: white;
   display: flex;
@@ -59,13 +63,16 @@ h2-header {
   text-align: center;
   border-bottom: 0.063em solid #2d333a;
   width: 12.5em;
-  font-size: 1.3em;  <!-- sería h3-->
+  font-size: 1.3em;
 }
+
 
 .name-link {
   color: #2d333a;
   text-decoration: none;
 }
+
+
 .name-link:hover {
   background-color: lightgrey;
   text-decoration: none;
@@ -74,18 +81,21 @@ h2-header {
   height: 3.125em;
   width: 12.5em;
 }
+
+
 .name-link:visited {
   color: #2d333a;
   text-decoration: none;
 }
 
 
-/* DESCRIPCIÓN EQUIPO */
+/* -- TEAM DESCRIPTION -- */
 .team_description  {
-  margin: 10% 5% ;
+  margin: 10% auto;
   font-style: italic;
-
+  width: 70%;
 }
+
 
 .team_description h2 {
   font-weight: 600;
@@ -93,7 +103,8 @@ h2-header {
   text-align: center;
 }
 
-/* ABOUT THE COMPONENTS */
+
+/* -- ABOUT THE COMPONENTS -- */
 .main-container-about {
   margin-left: 2.5%;
   margin-right: 2.5%;
@@ -111,10 +122,10 @@ h2-header {
   text-decoration: none;
 }
 
-p{
-  font-size: 0.90em
-  text-align: center;
 
+p{
+  font-size: 0.90em;
+  text-align: center;
 }
 
 .main-container-about h1 {
